# clip_crafter

./: .env.example  .eslintrc.js  .eslintrc.json  .gitignore  App.tsx  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  scenario_manager.py  tsconfig.json  video_to_project.py  vite.config.ts
components/: EditorView.tsx  GlobalSettingsDialog.tsx  MediaPanel.tsx  MediaPreviewDialog.tsx  SceneEditor.tsx  ScenesList.tsx  SettingsDialog.tsx  StartView.tsx  TTSErrorNotification.tsx
components/settings/: GeneralSettingsTab.tsx  TTSSettingsTab.tsx  VoiceSettingsTab.tsx
components/ui/: accordion.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  radio-group.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx
constants/: index.ts  settings.ts
hooks/: useDarkMode.ts  useGlobalSettings.ts  useProject.ts
src/: main.tsx
supabase/functions/server/: export.tsx  index.tsx  kv_store.tsx
types/: index.ts
utils/: helpers.ts  tts.ts
utils/supabase/: info.tsx
